# cogcache

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  NOTICE  README.Rmd  README.md  warp-mapping-prototype.qmd
R/: decode.R  extendr-wrappers.R  overview.R  plan.R  zzz.R
inst/: test_compare.R  test_warp.R
inst/ai-docs/: claude.md
inst/demo-scripts/: ghsst-epsg3412.R  warp-gebco-fiji.R  warp-gebco-pacific.R  warp-to-tiles.R  warp_ibcso_mawson.R
inst/design-docs/: BILINEAR_SCALING_NOTES.md  DESIGN_NOTES.md  GDAL_WARP_ARCHITECTURE.md  REORGANISE.md  VWARP_VISION.md  WARP-PLAN-EFFICIENCY-NOTES.md  analysis-compute-source-from-source.md  cog-duckdb-cache.qmd  cogcache-review.md  gdal-warper-audit.md
inst/diag-scripts/: diag-antimeridian-split.R  (+5 more)
man/: detect_split_strips.Rd  get_overview_dims.Rd  plan_warp_reads.Rd  rust_apply_warp.Rd  rust_collect_chunk_list.Rd  rust_compute_source_window.Rd  rust_decode_tile.Rd  rust_fetch_decode_tile.Rd  rust_gcp_coefficients.Rd  rust_gcp_transform_fwd.Rd  rust_gcp_transform_inv.Rd  rust_gen_img_proj_transform.Rd  rust_warp_approx.Rd  rust_warp_map.Rd  rust_warp_resample.Rd  rust_warp_scanline.Rd  select_overview.Rd
src/: Makevars.in  Makevars.win.in  cogcache-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: DESIGN_NOTES.md  LIB_RS_RESAMPLE_PATCH.md  approx.rs  grid.rs  lib.rs  rust_compute_source_window_binding.rs  source_window.rs  transform.rs  warp.rs
wholecat/: NOTES_kerchunk_parquet.md  enrich-rustycogs-parquet.R  ghrsst-refs-vds.py  wholecat.py  zaro-enriched-store.R
(+31 files in other folders)
